...
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bbI-82-XRe">
                                <rect key="frame" x="40" y="397" width="240" height="33"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Entrar">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="signUpButton:" destination="vDn-tB-tjE" eventType="touchUpInside" id="NHZ-FA-y2O"/>
                                </connections>
                            </button>
...
                                <constraints>
                                    <constraint firstAttribute="height" constant="105" id="zgl-yP-RTb"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2UD-hv-7Sg">
                                <rect key="frame" x="40" y="445" width="240" height="30"/>
                                <state key="normal" title="Registrar"/>
                                <connections>
                                    <action selector="signInButton:" destination="vDn-tB-tjE" eventType="touchUpInside" id="VJ0-ZB-gEl"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FEH-Ov-28v">
                                <rect key="frame" x="40" y="487.5" width="240" height="30"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="Confirmar">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="confirmButton:" destination="rTd-mm-Ssp" eventType="touchUpInside" id="lQU-Bu-Iig"/>
                                </connections>
                            </button>
...
